# prosperity-backtester

./: .gitignore  LICENSE  README.md  TEAM_PROOF_REPORT.md  pyproject.toml  r3_vol_smile.py  r4_manual.ipynb
analysis/: architecture_bakeoff.py  benchmark_attribution.py  benchmark_backends.py  benchmark_chris_reference.py  benchmark_direct_cli.py  benchmark_outputs.py  benchmark_runtime.py  calibrate.py  profile_replay.py  r4_final_one_shot_threshold_rescue.py  research_pack.py  rss_frontier.py  validate.py  voucher_central_deep_risk_forensics.py  voucher_m0_risk_forensics.py
configs/: pepper_sweep.json  r3_algo_v1_1_fill_sensitivity.json  r3_algo_v1_1_research.json  r3_algo_v1_2_fill_sensitivity.json  r3_algo_v1_2_research.json  r3_algo_v1_fill_sensitivity.json  r3_algo_v1_research.json  r3_algo_v2_fill_sensitivity.json  r3_algo_v2_research.json  r3_hydrogel_meanshift_stress.json  r4_hydrogel_v2_meanshift.json  research_scenarios.json  round2_added_strategies.json  round2_all_in_one_research.json  round2_pairwise_mc.json  round2_scenarios.json  round3_fill_sensitivity.json  round3_mc_smoke.json  round3_research_scenarios.json  round3_smoke.json  round4_fill_sensitivity.json  round4_mc_validation.json  round4_research_scenarios.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BENCHMARKS.md  BENCHMARK_SUMMARY.json  BUNDLES.md  CALIBRATED_RESEARCH.md  FINAL_AUDIT.md  NEW_ROUND_CHECKLIST.md  OUTPUTS.md  PERFORMANCE.md  REFERENCE_COMPARISON.md  REPOSITORY_GUIDE.md  ROUND2.md  ROUND3.md  ROUND3_HARDENING_REPORT.md  ROUND3_TRADER_RESEARCH.md  ROUND4.md  ROUND4_FINAL_ONE_SHOT_THRESHOLD_RESCUE_REPORT.md  ROUND4_HYDROGEL_REPORT.md  ROUND4_HYDROGEL_REPORT_V2.md  ROUND4_STATUS.md  ROUND4_VOUCHER_CENTRAL_DEEP_RISK_FORENSICS_REPORT.md  ROUND4_VOUCHER_RISK_HARDENING_REPORT.md  WORKFLOWS.md
examples/: benchmark_trader.py  pepper_optimize.json  pepper_optimize_quick.json  trader_round1_v9.py
legacy_dashboard/: dashboard.html
notebooks/: r4_manual.ipynb
prosperity_backtester/: __init__.py  (+33 more)
(+133 files in other folders)
