[project]
name = "prosperity-backtester"
version = "0.1.0"
description = "Replay, Monte Carlo and Round 2 MAF research platform for ASH_COATED_OSMIUM and INTARIAN_PEPPER_ROOT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []  # stdlib only for runtime

[project.optional-dependencies]
analysis = ["pandas>=2.0", "numpy>=1.24", "msgpack>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
prosperity-backtester = "prosperity_backtester.__main__:main"
r1mcbt = "r1bt.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["prosperity_backtester", "prosperity_backtester.*", "r1bt", "r1bt.*"]

[tool.setuptools.package-data]
prosperity_backtester = ["calibration.json"]
